# Alchyme

./: .gitignore  Alchyme.sln  CMakeLists.txt  README.md
AlchymeClient/: AlchymeClient.vcxproj  AlchymeClient.vcxproj.filters  CMakeLists.txt  Client.cpp  Client.h  Client.hpp  EngineVk.cpp  EngineVk.h  Game.cpp  Game.h  IClient.cpp  IClient.h  Main.cpp  Net.h  Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  Rml.cpp  Rml.hpp  TestMain_GL.cpp  glad.c
AlchymeClient/data/scripts/: entry.lua  menu.lua
AlchymeClient/data/ui/: main-menu-styles.rcss  main-menu.rml  password-menu.rml
AlchymeClient/src/: AlchymeClient.cpp  AlchymeClient.h  Client.cpp  Client.hpp  ClientMain.cpp  ClientRpc.cpp  Game.cpp  Game.h  IClient.cpp  IClient.h  MainRml.cpp  MyFileInterface.cpp  MyRenderInterface.cpp  MyRenderInterface.h  MySystemInterface.cpp  MySystemInterface.h  Script.cpp  Script.hpp  Shader.cpp  Shader.hpp
AlchymeCore/: AlchymeCore.vcxproj  AlchymeCore.vcxproj.filters  AsyncQueue.hpp  CMakeLists.txt  FastUnorderedList.hpp  Main.cpp  MainTestMethod.cpp  Method.h  Net.cpp  Net.h  NetPeer.cpp  NetPeer.h  Packet.cpp  Packet.h  Quadtree.h  Rpc.cpp  Rpc.h  Socket.cpp  Socket.h  Utils.h  Vec2.hpp  World.cpp  World.h
AlchymeCore/src/: AlchymeGame.cpp  AlchymeGame.h  AsioSocket.cpp  AsyncQueue.hpp  Chunk.cpp  Chunk.h  Entity.hpp  FastUnorderedList.hpp  GameInterface.h  IOResult.h  Method.h  NetPeer.cpp  NetPeer.h  Packet.cpp  Packet.h  Rpc.cpp  Rpc.h  Socket.h  Task.h  Utils.h  Vec2.hpp  World.cpp  World.h
AlchymeServer/: AlchymeServer.vcxproj  AlchymeServer.vcxproj.filters  BanList.cpp  BanList.h  CMakeLists.txt  IServer.cpp  IServer.h  Main.cpp  Server.cpp  Server.h  Server.hpp  TestMain_NormalRetrieval.cpp  TestMain_Quadtree.cpp  TestMain_RPC.cpp  out.ppm
AlchymeServer/src/: AlchymeServer.cpp  AlchymeServer.hpp  AlchymeServerRpc.cpp  Game.cpp  Game.hpp  IServer.cpp  IServer.h  Main.cpp  Server.cpp  Server.hpp  ServerMain.cpp  ServerRpc.cpp
Test/: Main.cpp  Packet.h  Test.vcxproj  Test.vcxproj.filters  TestAsyncInput.cpp  TestPtrMethod.cpp
b_AlchymeServer/: CMakeLists.txt
b_AlchymeServer/src/: IServer.cpp  IServer.h  Server.cpp  Server.hpp  ServerMain.cpp
client_data/data/scripts/: entry.lua
client_data/data/ui/: password-menu-styles.rcss
data/client_data/ui/: main-menu.rml
include/: AlchymeClient.h  AlchymeGame.h  AlchymeServer.hpp  AsyncDeque.hpp  Client.hpp  Game.hpp  Method.h  MyFileInterface.h  NetPacket.hpp  NetPeer.h  NetPeer.hpp  Packet.h  Rms.h  Rpc.h  Script.hpp  Server.hpp  Socket.h  Task.h  Task.hpp  Utils.h  Utils.hpp
src/: AlchymeGame.cpp  AsioSocket.cpp  Game.cpp  GameNetworkingSockets.cpp  Main.cpp  NetPacket.cpp  NetPeer.cpp  Packet.cpp  Rms.cpp  Rpc.cpp  Utils.cpp
src/client/: AlchymeClient.cpp  Client.cpp  ClientMain.cpp  ClientRpc.cpp  MyRenderInterface.cpp  Script.cpp
src/server/: AlchymeServer.cpp  AlchymeServerRpc.cpp  Server.cpp  ServerMain.cpp  ServerRpc.cpp
